--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@
 @import "section/team";
 @import "section/menu";
 @import "section/staff";
+@import "section/delivery";
 @import "section/map";
 @import "section/footer";
 
