--- a/scss/layout/adjustment.scss
+++ b/scss/layout/adjustment.scss
@@ -16,6 +16,7 @@
 
 .container {
   width: 940px;
+  height: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -55,4 +56,20 @@
   font-size: 72px;
   text-transform: uppercase;
   font-weight: 400;
+}
+
+.btn {
+  font-family: 'Ubuntu-Medium', Arial, serif;
+  width: 100px;
+  height: 38px;
+  background: $bg-btn;
+  color: #fff;
+  font-size: 13px;
+  text-transform: uppercase;
+  border: $bg-btn;
+  border-radius: 5px;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
