--- a/scss/config/variables.scss
+++ b/scss/config/variables.scss
@@ -4,3 +4,9 @@ $black: #2f3234;
 $red: #e35028;
 $bg-btn: #e45028;
 $footer-tel: $bg-btn;
+
+// resolutions
+$desktop: 1200px;
+$laptop: 992px;
+$tablets: 768px;
+$phones: 480px;
