--- a/scss/section/best.scss
+++ b/scss/section/best.scss
@@ -1,6 +1,6 @@
 .best {
   height: 100vh;
-  background: url("../img/back/best-sec-bg.png");
+  background: url("../img/back/best-sec-bg.png") center center no-repeat;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -9,7 +9,7 @@
 .best__tittle {
   font-family: 'gagalin', Arial, serif;
   color: #2f3234;
-  font-size: 72px;
+  font-size: rem(72px);
   text-transform: uppercase;
   font-weight: 400;
   text-align: center;
@@ -25,12 +25,12 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  max-width: 300px;
+  max-width: rem(300px);
 }
 
 .best__item-img {
-  width: 100px;
-  height: 90px;
+  width: rem(100px);
+  height: rem(90px);
 
   &-meat {
     background: url("../img/decor/meat.png") center center no-repeat;
@@ -47,12 +47,12 @@
 
 .best__item-tittle {
   font-family: 'lifehack', Arial, serif;
-  font-size: 24px;
+  font-size: rem(24px);
   font-weight: 500;
 }
 
 .best__item-text {
   font-family: 'Ubuntu-Light', Arial, serif;
-  font-size: 14px;
+  font-size: rem(14px);
   font-weight: 300;
 }
