--- a/scss/section/natural.scss
+++ b/scss/section/natural.scss
@@ -1,7 +1,7 @@
 .natural {
   width: 100%;
   height: 100vh;
-  background: url("../img/back/main-bg.png")  no-repeat;
+  background: url("../img/back/main-bg.png")  center center no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -10,26 +10,38 @@
 
 .natural__img {
   margin-top: 25px;
-  flex: 2;
-  min-width: 460px;
+  width: 50%;
   min-height: 425px;
   background: url("../img/decor/main-burger.png") center center no-repeat;
+
+  @include tablets() {
+    width: 100%;
+  }
+}
+
+.natural__content {
+  width: 50%;
+
+  @include tablets() {
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .natural__tittle {
-  font-family: 'gagalin', Arial, serif;
-  color: #f9b43b;
-  font-size: 72px;
-  text-transform: uppercase;
-  font-weight: 400;
   margin-bottom: 40px;
   margin-top: 175px;
+
+  @include tablets() {
+    margin-bottom: 0;
+    margin-top: 0;
+  }
 }
 
 .natural__text {
   font-family: 'lifehack', Arial, serif;
   color: white;
-  font-size: 65px;
+  font-size: rem(65px);
   font-weight: 500;
   margin: 0;
 }
