add adaptive for phone

--- a/scss/layout/adjustment.scss
+++ b/scss/layout/adjustment.scss
@@ -38,6 +38,13 @@
   }
 }
 
+.best__container {
+  @include phones() {
+    align-items: initial;
+    justify-content: initial;
+  }
+}
+
 .menu__container {
   align-items: normal;
   margin: 0;
@@ -45,6 +52,10 @@
 
 .footer__container {
   flex-direction: row;
+
+  @include phones() {
+    flex-direction: column;
+  }
 }
 
 .team__container {
@@ -59,6 +70,10 @@
   font-size: rem(72px);
   text-transform: uppercase;
   font-weight: 400;
+
+  @include phones() {
+    font-size: rem(50px);
+  }
 }
 
 .btn {
