--- a/scss/section/menu.scss
+++ b/scss/section/menu.scss
@@ -1,5 +1,5 @@
 .menu {
-  background: url("../img/back/menu.png");
+  background: url("../img/back/menu.png") center center no-repeat;
   background-size: cover;
   position: relative;
 }
