--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,15 @@ ul {
       -ms-flex-direction: column;
       flex-direction: column; } }
 
+@media screen and (max-width: 480px) {
+  .best__container {
+    -webkit-box-align: initial;
+    -ms-flex-align: initial;
+    align-items: initial;
+    -webkit-box-pack: initial;
+    -ms-flex-pack: initial;
+    justify-content: initial; } }
+
 .menu__container {
   -webkit-box-align: normal;
   -ms-flex-align: normal;
@@ -135,6 +144,12 @@ ul {
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
   flex-direction: row; }
+  @media screen and (max-width: 480px) {
+    .footer__container {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
 
 .team__container {
   width: 50vw;
@@ -149,6 +164,9 @@ ul {
   font-size: 4.5rem;
   text-transform: uppercase;
   font-weight: 400; }
+  @media screen and (max-width: 480px) {
+    .title {
+      font-size: 3.125rem; } }
 
 .btn {
   font-family: 'Ubuntu-Medium', Arial, serif;
@@ -162,6 +180,10 @@ ul {
   border-radius: 5px; }
   .btn:hover {
     cursor: pointer; }
+
+@media screen and (max-width: 768px) {
+  .side-nav {
+    display: none; } }
 
 .side-nav__list {
   display: -webkit-box;
@@ -319,6 +341,12 @@ ul {
   display: -ms-flexbox;
   display: flex;
   list-style: none; }
+  @media screen and (max-width: 480px) {
+    .best__list {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
 
 .best__item {
   display: -webkit-box;
@@ -333,16 +361,28 @@ ul {
   align-items: center;
   text-align: center;
   max-width: 18.75rem; }
+  @media screen and (max-width: 480px) {
+    .best__item {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      max-width: 100%;
+      text-align: left; } }
 
 .best__item-img {
-  width: 6.25rem;
-  height: 5.625rem; }
+  min-width: 6.25rem;
+  min-height: 5.625rem; }
   .best__item-img-meat {
     background: url("../img/decor/meat.png") center center no-repeat; }
   .best__item-img-hand {
     background: url("../img/decor/hand.png") center center no-repeat; }
   .best__item-img-natural {
     background: url("../img/decor/natural.png") center center no-repeat; }
+
+@media screen and (max-width: 480px) {
+  .best__item-content {
+    margin-left: 28px; } }
 
 .best__item-tittle {
   font-family: 'lifehack', Arial, serif;
@@ -427,7 +467,7 @@ ul {
   font-weight: 700; }
 
 .menu {
-  background: url("../img/back/menu.png");
+  background: url("../img/back/menu.png") center center no-repeat;
   background-size: cover;
   position: relative; }
 
@@ -565,7 +605,8 @@ ul {
   background-size: cover; }
 
 .delivery__tittle {
-  margin-bottom: 2.75rem; }
+  margin-bottom: 2.75rem;
+  text-align: center; }
 
 .delivery__form-elem {
   display: -webkit-box;
@@ -591,12 +632,22 @@ ul {
     margin-right: 0; }
   @media screen and (max-width: 768px) {
     .delivery__form-content {
-      margin-right: 0; } }
+      margin-right: 0;
+      width: 100%; } }
 
 .delivery__form-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+
+@media screen and (max-width: 480px) {
+  .delivery__form-row--center {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; } }
 
 .delivery__form-block {
   display: block;
@@ -653,7 +704,7 @@ ul {
   width: 100vw; }
 
 .footer {
-  background: url("../img/back/footer.png");
+  background: url("../img/back/footer.png") center center no-repeat;
   background-size: cover;
   position: absolute;
   bottom: 0;
@@ -664,11 +715,17 @@ ul {
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
   flex-direction: row;
-  width: 100vw; }
+  width: 100vw;
+  padding-bottom: 20px; }
 
 .footer__contacts {
   text-align: left;
   margin-right: auto; }
+  @media screen and (max-width: 480px) {
+    .footer__contacts {
+      margin-right: 0;
+      margin-bottom: 20px;
+      text-align: center; } }
 
 .footer__address {
   font-family: 'Ubuntu-Light', Arial, serif;
