--- a/scss/section/footer.scss
+++ b/scss/section/footer.scss
@@ -1,16 +1,23 @@
 .footer {
-  background: url("../img/back/footer.png");
+  background: url("../img/back/footer.png") center center no-repeat;
   background-size: cover;
   position: absolute;
   bottom: 0;
   display: flex;
   flex-direction: row;
   width: 100vw;
+  padding-bottom: 20px;
 }
 
 .footer__contacts {
   text-align: left;
   margin-right: auto;
+
+  @include phones() {
+    margin-right: 0;
+    margin-bottom: 20px;
+    text-align: center;
+  }
 }
 
 .footer__address {
