--- a/scss/layout/adjustment.scss
+++ b/scss/layout/adjustment.scss
@@ -17,6 +17,7 @@
 .container {
   width: 95%;
   max-width: 940px;
+  min-height: 650px;
   height: 100%;
   margin: 0 auto;
   display: flex;
@@ -26,6 +27,7 @@
 }
 
 .header__container {
+  min-height: 80px;
   flex-direction: row;
   justify-content: space-between;
 }
@@ -51,6 +53,7 @@
 }
 
 .footer__container {
+  min-height: 60px;
   flex-direction: row;
 
   @include phones() {
