--- a/scss/section/map.scss
+++ b/scss/section/map.scss
@@ -1,7 +1,12 @@
 .map {
-  background: url("../img/map.png");
+  //background: url("../img/map.png");
   background-size: cover;
   position: relative;
   height: 100vh;
   width: 100vw;
+}
+
+.map__yandex {
+  width: 100%;
+  height: 100%;
 }
