--- a/scss/section/menu.scss
+++ b/scss/section/menu.scss
@@ -6,8 +6,7 @@
 
 .menu__tittle {
   color: white;
-  margin-top: rem(111px);
-  margin-left: rem(95px);
+  margin-left: 5vw;
 }
 
 .menu__accordion {
@@ -26,13 +25,13 @@
 
 .menu__item--active {
   .menu__more {
-    width: rem(540px);
+    width: 40vw;
     overflow: initial;
   }
 }
 
 .menu__link-for {
-  width: rem(80px);
+  width: 7vw;
   height: 100vh;
   writing-mode: vertical-rl;
   font-family: 'gagalin', Arial, serif;
@@ -41,6 +40,9 @@
   font-size: rem(40px);
   color: white;
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &-meat {
     background: url("../img/back/for-meat-man.png");
@@ -59,7 +61,7 @@
 }
 
 .menu__link-text {
-  padding: 20px;
+  padding: rem(20px);
   transform: rotate(180deg);
 }
 
