--- a/css/main.css
+++ b/css/main.css
@@ -304,6 +304,10 @@ ul {
 .header__logo {
   margin-right: auto; }
 
+.logo__img {
+  width: 90px;
+  height: 70px; }
+
 .natural {
   width: 100%;
   height: 100vh;
@@ -406,14 +410,8 @@ ul {
       text-align: left; } }
 
 .best__item-img {
-  min-width: 6.25rem;
-  min-height: 5.625rem; }
-  .best__item-img-meat {
-    background: url("../img/decor/meat.png") center center no-repeat; }
-  .best__item-img-hand {
-    background: url("../img/decor/hand.png") center center no-repeat; }
-  .best__item-img-natural {
-    background: url("../img/decor/natural.png") center center no-repeat; }
+  max-width: 6.25rem;
+  max-height: 5.625rem; }
 
 @media screen and (max-width: 480px) {
   .best__item-content {
@@ -819,6 +817,10 @@ ul {
   font-size: 0.875rem;
   font-weight: 700;
   color: #e35028; }
+  .footer__tel-img {
+    width: 12px;
+    height: 11px;
+    fill: #E45028; }
 
 .footer__socials {
   text-align: right; }
@@ -831,14 +833,9 @@ ul {
 .footer__item {
   margin-right: 1.25rem; }
 
-.footer__soc {
-  width: 1.25rem;
-  height: 1.25rem; }
-  .footer__soc-vk {
-    background: url("../img/socials/vk.png") center center no-repeat; }
-  .footer__soc-fb {
-    background: url("../img/socials/fb.png") center center no-repeat; }
-  .footer__soc-inst {
-    background: url("../img/socials/inst.png") center center no-repeat; }
-  .footer__soc-tw {
-    background: url("../img/socials/tw.png") center center no-repeat; }
+.footer__soc-icon {
+  width: 20px;
+  height: 20px;
+  fill: #595959; }
+  .footer__soc-icon:hover {
+    fill: #FFFF; }
