--- a/css/main.css
+++ b/css/main.css
@@ -280,14 +280,14 @@ ul {
   .header__item:last-child:before {
     display: none; }
 
-.header__item-link {
+.header__item-link, .header__add .header__add-link {
   font-family: 'Ubuntu-Medium', Arial, serif;
   color: #ffff;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 13px;
   font-weight: 500; }
-  .header__item-link-btn {
+  .header__item-link-btn, .header__add .header__add-link .header__add-btn {
     display: inline-block;
     padding: 13px 15px;
     font-family: 'Ubuntu-Medium', Arial, serif;
@@ -297,6 +297,13 @@ ul {
     text-transform: uppercase;
     border: #e45028;
     border-radius: 5px; }
+
+.header__add {
+  display: none;
+  margin-right: 50px; }
+  @media screen and (max-width: 768px) {
+    .header__add {
+      display: initial; } }
 
 .header__btn {
   margin-left: 15px; }
