--- a/scss/section/team.scss
+++ b/scss/section/team.scss
@@ -50,8 +50,8 @@
 }
 
 .team__more-ava {
-  max-width: rem(100px);
-  max-height: rem(100px);
+  width: rem(100px);
+  height: rem(100px);
   border-radius: 50%;
   overflow: hidden;
   margin-right: rem(10px);
