--- a/scss/section/footer.scss
+++ b/scss/section/footer.scss
@@ -28,6 +28,7 @@
 }
 
 .footer__tel {
+  text-decoration: none;
   font-family: 'Ubuntu-Light', Arial, serif;
   font-size: rem(14px);
   font-weight: 700;
