--- a/css/main.css
+++ b/css/main.css
@@ -81,8 +81,8 @@ ul {
   min-height: 650px; }
 
 .section {
-  height: 100vh;
-  width: 100%; }
+  min-height: 100vh;
+  width: 100vw; }
 
 .container {
   width: 95%;
@@ -102,7 +102,14 @@ ul {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
-  flex-direction: column; }
+  flex-direction: column;
+  padding: 0 70px; }
+  @media screen and (max-width: 768px) {
+    .container {
+      padding: 0 50px; } }
+  @media screen and (max-width: 480px) {
+    .container {
+      padding: 0 20px; } }
 
 .header__container {
   min-height: 80px;
@@ -143,6 +150,11 @@ ul {
   -ms-flex-pack: initial;
   justify-content: initial;
   margin: 0; }
+
+.delivery__container {
+  -webkit-box-align: initial;
+  -ms-flex-align: initial;
+  align-items: initial; }
 
 .footer__container {
   min-height: 60px;
@@ -316,8 +328,6 @@ ul {
   height: 70px; }
 
 .natural {
-  width: 100%;
-  height: 100vh;
   background: url("../img/back/main-bg.png") center center no-repeat;
   background-size: cover;
   display: -webkit-box;
@@ -362,7 +372,6 @@ ul {
   margin: 0; }
 
 .best {
-  height: 100vh;
   background: url("../img/back/best-sec-bg.png") center center no-repeat;
   background-size: cover;
   display: -webkit-box;
@@ -616,7 +625,7 @@ ul {
   max-width: 29.375rem; }
 
 .staff {
-  min-height: 100vh;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -822,6 +831,7 @@ ul {
   color: white; }
 
 .footer__tel {
+  text-decoration: none;
   font-family: 'Ubuntu-Light', Arial, serif;
   font-size: 0.875rem;
   font-weight: 700;
