--- a/scss/config/media.scss
+++ b/scss/config/media.scss
@@ -1,3 +1,9 @@
+@mixin laptop {
+  @media screen and (max-width: $laptop) {
+    @content;
+  }
+}
+
 @mixin tablets {
   @media screen and (max-width: $tablets) {
     @content;
