--- a/scss/layout/adjustment.scss
+++ b/scss/layout/adjustment.scss
@@ -39,12 +39,14 @@
   min-height: 80px;
   flex-direction: row;
   justify-content: space-between;
+  padding: 0 10px;
 }
 
 .natural__container {
   flex-direction: row;
+  padding: 0 10px;
 
-  @include tablets() {
+  @include laptop() {
     flex-direction: column;
   }
 }
